PROJECT(Applications)

IF(Slicer_BUILD_CLI)
  ADD_SUBDIRECTORY(CLI)
ENDIF(Slicer_BUILD_CLI)

IF (Slicer_USE_KWWIDGETS)
  ADD_SUBDIRECTORY(GUI)
ENDIF (Slicer_USE_KWWIDGETS)

IF(Slicer_USE_QT)
  ADD_SUBDIRECTORY(SlicerQT)
ENDIF(Slicer_USE_QT)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
